# streamlit-crewai

./: notebook.ipynb
day1/: README.md  pyproject.toml
day1/src/day1/: crew.py  main.py
day1/src/day1/config/: agents.yaml  tasks.yaml
day2/: README.md  pyproject.toml  requirements.txt
day2/src/day2/: crew.py  main.py  requirements.txt  streamlit_app.py
day2/src/day2/config/: agents.yaml  tasks.yaml
day3/src/day3/: crew.py  main.py  report.md
day3/src/day3/config/: agents.yaml  tasks.yaml
day4/src/day4/: crew.py  main.py  report.md  report_20241209_173029.md  report_20241209_173210.md  report_20241209_173606.md  report_20241209_174306.md  report_20241209_174536.md
day4/src/day4/config/: tasks.yaml
day4/src/day4/tools/: custom_tool.py
day5/news/: news.md
day5/src/day5/: Myflow.py  chatUI.py  crew.py  report_20241209_182538.md  report_20241209_182718.md  report_20241209_232631.md
day6/: README.md  pyproject.toml
day6/news/: news.md
day6/src/day6/: Myflow.py  crew.py  main.py
day7/src/day7/: Myflow.py  crew.py  main.py  report_20241210_005244.md  report_20241210_005538.md
day7/src/day7/config/: agents.yaml
day7/src/day7/tools/: custom_file_writer_tool.py  custom_tool.py
