[project]
name = "day2"
version = "0.1.0"
description = "day2 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.83.0,<1.0.0"
]

[project.scripts]
day2 = "day2.main:run"
run_crew = "day2.main:run"
train = "day2.main:train"
replay = "day2.main:replay"
test = "day2.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
